--- a/SeeYue/CSS/configs/dark-config.css
+++ b/SeeYue/CSS/configs/dark-config.css
@@ -108,7 +108,7 @@
 
     /* 标题文本颜色 */
     --h1-color: #d08770;
-    --h2-color: #eceff4;
+    --h2-color: #88C0D0;
     --h3-h4-color: #a3be8c !important;
     --h5-color: rgba(163, 190, 140, .7);
     --h6-color: rgba(163, 190, 140, .5);
