--- a/SeeYue/CSS/configs/pure-config.css
+++ b/SeeYue/CSS/configs/pure-config.css
@@ -108,7 +108,7 @@
 
     /* 标题文本颜色 */
     --h1-color: #2e3440;
-    --h2-color: #ffffff;
+    --h2-color: #5E81AC;
     --h3-h4-color: #3b4252 !important;
     --h5-color: rgba(59, 66, 82, .7);
     --h6-color: rgba(59, 66, 82, .5);
