--- a/SeeYue/CSS/configs/salt-config.css
+++ b/SeeYue/CSS/configs/salt-config.css
@@ -108,7 +108,7 @@
 
     /* 标题文本颜色 */
     --h1-color: #f87759;
-    --h2-color: #ffffff;
+    --h2-color: #457B9D;
     --h3-h4-color: #81b29a !important;
     --h5-color: rgb(129, 178, 154, .7);
     --h6-color: rgb(129, 178, 154, .5);
